# flyfus_tool

./: .difyignore  CHANGELOG.md  README.md  main.py  manifest.yaml  pyproject.toml
docs/: release-process.md
provider/: flyfus_tool.py  flyfus_tool.yaml  flypower_image.py  flypower_image.yaml  flypower_tool.py  flypower_tool.yaml
tools/: _image_utils.py  _sls_logging.py  flypower_image_generate.py  flypower_image_generate.yaml  set_next_step.py  set_next_step.yaml
tools/agent/: set_next_step.yaml
tools/image/: flyfus_image_generate.py  flyfus_image_generate.yaml  flypower_image_generate.py  flypower_image_generate.yaml
tools/image/models/: gpt-image-2-4k.yaml
tools/image/tests/: test_image_output.py
tools/next_step/: set_next_step.yaml
tools/read_file/: read_file.py  read_file.yaml
tools/router/: flyfus_tool_router.py  flyfus_tool_router.yaml
tools/router/tests/: test_flyfus_tool_router.py
tools/skills/: flyfus_skills.py  flyfus_skills.yaml  flypower_skills.py  flypower_skills.yaml
tools/skills/tests/: test_flyfus_skills.py  test_flypower_skills.py
tools/tests/: test_sls_logging.py
