[project]
name = "flypower-image-tool"
version = "0.1.0"
description = "Dify image generation tool plugin for Flypower OpenAI-compatible endpoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify_plugin>=0.9.0",
    "openai>=1.109.1",
    "pyyaml>=6.0.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
